needed fix on iphone max

--- a/mobile.css
+++ b/mobile.css
@@ -13,7 +13,7 @@
 
 .button-panel {
   width: 300px;
-  height: 500px;
+  height: 550px;
   top: 50%;
   left: 50%;
   /* margin: -150px 0 0 -200px; */
